--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>アークナイツ人狼 GMツール</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./style.css" />
+    <!-- favicon.ico 404回避（データURI） -->
+    <link
+      rel="icon"
+      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='14' fill='%23050712'/%3E%3Cpath d='M18 18h8l6 18 6-18h8L38 46h-12L18 18z' fill='%23f5f5f7'/%3E%3C/svg%3E"
+    />
   </head>
   <body>
     <div id="app">
