--- a/index.html
+++ b/index.html
@@ -370,6 +370,20 @@
         </div>
       </div>
 
+      <!-- 自分の役職確認モーダル（ゲーム開始時） -->
+      <div id="self-role-modal" class="modal hidden">
+        <div class="modal-backdrop"></div>
+        <div class="modal-content">
+          <h2>あなたの役職</h2>
+          <p id="self-role-text" class="result-summary" style="text-align: center; font-size: 20px; margin-top: 12px;">
+            （取得中…）
+          </p>
+          <div class="modal-actions">
+            <button id="self-role-ok" class="btn primary">OK</button>
+          </div>
+        </div>
+      </div>
+
       <!-- 勝敗結果ポップアップ -->
       <div id="result-modal" class="modal hidden">
         <div class="modal-backdrop"></div>
