--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='14' fill='%23050712'/%3E%3Cpath d='M18 18h8l6 18 6-18h8L38 46h-12L18 18z' fill='%23f5f5f7'/%3E%3C/svg%3E"
     />
   </head>
-  <body>
+  <body class="opaque-bg">
     <div id="app">
       <!-- ホーム画面 -->
       <section id="home-screen" class="screen active">
@@ -36,10 +36,24 @@
               <p style="margin: 12px 0 0 0; font-size: 12px; color: #a0a4ba; text-align: center;">このルームIDを参加者に共有してください</p>
             </div>
             <div id="create-room-form" class="create-room-form" style="display: none; margin-top: 12px;">
+              <div style="display:flex; justify-content:center; margin-bottom: 10px;">
+                <label class="player-avatar-input" id="host-avatar-label" title="アイコン画像をアップロード">
+                  <span id="host-avatar-letter">?</span>
+                  <img id="host-avatar-preview" class="avatar-preview hidden" alt="host avatar preview" />
+                  <input type="file" id="host-avatar-file" accept="image/*" />
+                </label>
+              </div>
               <input type="text" id="host-name-input" placeholder="あなたの名前を入力" class="host-name-input" style="width: 100%; padding: 8px; margin-bottom: 8px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.2); background: rgba(5,7,18,0.8); color: #f5f5f7; font-size: 14px; text-align: center;" />
               <button id="btn-create-room-confirm" class="btn primary" style="width: 100%;">ルーム作成</button>
             </div>
             <div id="join-room-form" class="join-room-form" style="display: none; margin-top: 12px;">
+              <div style="display:flex; justify-content:center; margin-bottom: 10px;">
+                <label class="player-avatar-input" id="player-avatar-label" title="アイコン画像をアップロード">
+                  <span id="player-avatar-letter">?</span>
+                  <img id="player-avatar-preview" class="avatar-preview hidden" alt="player avatar preview" />
+                  <input type="file" id="player-avatar-file" accept="image/*" />
+                </label>
+              </div>
               <input type="text" id="room-id-input" placeholder="ルームIDを入力（6文字）" class="room-id-input" style="width: 100%; padding: 8px; margin-bottom: 8px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.2); background: rgba(5,7,18,0.8); color: #f5f5f7; font-size: 14px; text-transform: uppercase; text-align: center; letter-spacing: 0.1em;" maxlength="6" />
               <input type="text" id="player-name-input" placeholder="あなたの名前を入力" class="player-name-input" style="width: 100%; padding: 8px; margin-bottom: 8px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.2); background: rgba(5,7,18,0.8); color: #f5f5f7; font-size: 14px; text-align: center;" />
               <button id="btn-join-room-confirm" class="btn primary" style="width: 100%;">参加</button>
@@ -70,6 +84,7 @@
               <li>本ツールは個人が制作した <strong>非公式ファンツール</strong> です。</li>
               <li>Hypergryph / Yostar とは一切関係ありません。</li>
               <li>利用は<strong>自己責任</strong>でお願いします。</li>
+              <li style="margin-top: 8px; color: #a0a4ba; font-size: 12px;">配信の演出上GMアリで作成していますが、そのうちもっと遊びやすいようにGMナシ版の作成も検討中なので許してちょんまげ</li>
             </ul>
             <button id="start-game" class="btn primary start-btn" style="display: none;">ゲーム開始</button>
           </section>
@@ -137,6 +152,14 @@
                   <span class="status-main-label">ステージ</span>
                   <span id="status-stage" class="status-main-value status-stage-value">未選出</span>
                 </div>
+                <div class="status-main-item" id="status-wolf-cost-item" style="display: none;">
+                  <span class="status-main-label">妨害コスト</span>
+                  <span id="status-wolf-cost" class="status-main-value">- / -</span>
+                </div>
+                <div class="status-main-item" id="status-doctor-punch-item" style="display: none;">
+                  <span class="status-main-label">神拳発動</span>
+                  <span id="status-doctor-punch" class="status-main-value">-</span>
+                </div>
               </div>
               <button id="main-options-btn" class="icon-button" title="オプション">
                 ⚙
@@ -173,20 +196,9 @@
               </button>
             </div>
             <div class="control-group">
-              <button id="btn-wolf-action" class="btn warning wide">
-                人狼妨害使用 <span id="wolf-remaining-in-button">(残り 5 回)</span>
+              <button id="btn-open-stage-roulette" class="btn primary wide">
+                ステージ選出開始
               </button>
-              <small id="wolf-hint" class="hint">
-                ※1ターンに1回まで
-              </small>
-            </div>
-            <div class="control-group">
-              <button id="btn-doctor-punch" class="btn info wide">
-                ドクター神拳使用
-              </button>
-              <small id="doctor-hint" class="hint">
-                ※1ターンに1回まで / 失敗時のみ有効
-              </small>
             </div>
           </aside>
         </div>
@@ -197,6 +209,39 @@
             本ツールは非公式ファンツールです。Hypergryph / Yostar とは一切関係ありません。
           </p>
         </footer>
+      </section>
+
+      <!-- 参加者画面（最小UI：役職ボタンのみ / 画面表示エリアなし） -->
+      <section id="participant-screen" class="screen">
+        <div class="participant-layout">
+          <div class="participant-content">
+            <h1 class="participant-title">参加者用操作</h1>
+            <p class="participant-subtitle">GMの画面共有を見ながら進行してください</p>
+
+            <!-- 役職表示 -->
+            <div id="participant-role-display" class="participant-role-display" style="display: none;">
+              <span class="participant-role-label">役職:</span>
+              <span id="participant-role-text" class="participant-role-text">-</span>
+            </div>
+
+            <!-- コスト表示（人狼のみ） -->
+            <div id="participant-cost-display" class="participant-cost-display" style="display: none;">
+              <span class="participant-cost-label">Cost:</span>
+              <span id="participant-cost-value" class="participant-cost-value">-</span>
+              <span class="participant-cost-separator">/</span>
+              <span id="participant-cost-max" class="participant-cost-max">-</span>
+            </div>
+
+            <div class="participant-actions">
+              <button id="btn-wolf-action" class="btn warning wide">
+                人狼妨害
+              </button>
+              <button id="btn-doctor-punch" class="btn info wide">
+                ドクター神拳
+              </button>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- ステージルーレットポップアップ -->
@@ -221,24 +266,99 @@
         </div>
       </div>
 
-      <!-- 妨害ルーレットポップアップ -->
-      <div id="wolf-roulette-modal" class="modal hidden">
+      <!-- 妨害選択ポップアップ（人狼用） -->
+      <div id="wolf-action-select-modal" class="modal hidden">
         <div class="modal-backdrop"></div>
         <div class="modal-content">
-          <h2>人狼妨害ルーレット</h2>
+          <h2>人狼妨害選択</h2>
           <p class="modal-subtitle">
-            カスタム設定からランダムで1件選ばれます。
+            発動する妨害を選択してください（コスト: <span id="wolf-cost-display">-</span> / <span id="wolf-cost-max">-</span>）
           </p>
-          <div id="wolf-roulette-items" class="roulette-list">
+          <div id="wolf-action-list" class="wolf-action-list">
+            <!-- JSで妨害リストを表示 -->
+          </div>
+          <div class="modal-actions">
+            <button data-close-modal="wolf-action-select-modal" class="btn ghost">
+              閉じる
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <!-- GM向け：妨害発動通知ポップアップ -->
+      <div id="gm-wolf-action-notification-modal" class="modal hidden">
+        <div class="modal-backdrop"></div>
+        <div class="modal-content">
+          <h2>妨害発動</h2>
+          <p id="gm-wolf-action-text" class="result-summary" style="text-align: center; font-size: 20px; margin-top: 12px;">
+            （取得中…）
+          </p>
+          <div class="modal-actions">
+            <button id="gm-wolf-action-ok" class="btn primary">OK</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- GM向け：職業ルーレットポップアップ（ランダム職業使用禁止用） -->
+      <div id="job-roulette-modal" class="modal hidden">
+        <div class="modal-backdrop"></div>
+        <div class="modal-content">
+          <h2>職業ルーレット</h2>
+          <p class="modal-subtitle">
+            ランダム職業使用禁止：使用禁止になる職業を選出します。
+          </p>
+          <div id="job-roulette-items" class="roulette-list">
             <!-- JSで候補を表示 -->
           </div>
           <div class="modal-actions">
-            <button id="wolf-roulette-start" class="btn primary">
+            <button id="job-roulette-start" class="btn primary">
               ルーレット開始
             </button>
-            <button data-close-modal="wolf-roulette-modal" class="btn ghost">
+            <button data-close-modal="job-roulette-modal" class="btn ghost">
               閉じる
             </button>
+          </div>
+        </div>
+      </div>
+
+      <!-- 人狼妨害の使用確認（手番開始フェーズ） -->
+      <div id="wolf-decision-modal" class="modal hidden">
+        <div class="modal-backdrop"></div>
+        <div class="modal-content">
+          <h2>人狼妨害</h2>
+          <p class="modal-subtitle">
+            手番のはじめに妨害を使用しますか？
+          </p>
+          <div class="modal-actions">
+            <button id="wolf-decision-use" class="btn warning">使用する</button>
+            <button id="wolf-decision-skip" class="btn ghost">使用しない</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- GM向けアナウンス（参加者に見せない） -->
+      <div id="gm-announcement-modal" class="modal hidden">
+        <div class="modal-backdrop"></div>
+        <div class="modal-content">
+          <h2>アナウンス</h2>
+          <p class="modal-subtitle">
+            この次の画面は参加者が閲覧できないようにしてください。（OBSの表示を一時的に隠す等）
+          </p>
+          <div class="modal-actions">
+            <button id="gm-announcement-ok" class="btn primary">OK</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- GM向け：全員の役職一覧 -->
+      <div id="gm-roles-modal" class="modal hidden">
+        <div class="modal-backdrop"></div>
+        <div class="modal-content wide">
+          <h2>役職一覧（GM専用）</h2>
+          <p class="modal-subtitle">ゲーム開始時に割り当てられた役職を周知します。</p>
+          <div id="gm-roles-list" class="role-confirmation-list"></div>
+          <div class="modal-actions">
+            <button id="gm-roles-ok" class="btn primary">OK</button>
           </div>
         </div>
       </div>
