--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
                 失敗
               </button>
             </div>
+            <div class="control-group">
+              <button id="btn-open-stage-roulette" class="btn primary wide">
+                ステージ選出開始
+              </button>
+            </div>
           </aside>
         </div>
 
