--- a/index.html
+++ b/index.html
@@ -289,6 +289,28 @@
         </div>
       </div>
 
+      <!-- GM向け：人狼操作中通知 -->
+      <div id="gm-wolf-operation-modal" class="modal hidden">
+        <div class="modal-backdrop"></div>
+        <div class="modal-content">
+          <h2>操作中</h2>
+          <p class="modal-subtitle" style="text-align: center; font-size: 18px; margin-top: 12px;">
+            人狼が操作中です
+          </p>
+        </div>
+      </div>
+
+      <!-- GM向け：ドクター操作中通知 -->
+      <div id="gm-doctor-operation-modal" class="modal hidden">
+        <div class="modal-backdrop"></div>
+        <div class="modal-content">
+          <h2>操作中</h2>
+          <p class="modal-subtitle" style="text-align: center; font-size: 18px; margin-top: 12px;">
+            ドクターが操作中です
+          </p>
+        </div>
+      </div>
+
       <!-- GM向け：職業ルーレットポップアップ（ランダム職業使用禁止用） -->
       <div id="job-roulette-modal" class="modal hidden">
         <div class="modal-backdrop"></div>
