--- a/index.html
+++ b/index.html
@@ -538,10 +538,8 @@
           <div id="result-extra" class="result-extra"></div>
           <div id="result-roles" class="result-roles"></div>
           <div class="modal-actions">
-            <button id="result-reset" class="btn primary">リセットして終了</button>
-            <button data-close-modal="result-modal" class="btn ghost">
-              閉じる
-            </button>
+            <button id="result-return-lobby" class="btn primary">ロビーに戻る</button>
+            <button id="result-disband" class="btn ghost">解散してホームに戻る</button>
           </div>
         </div>
       </div>
