--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <li style="margin-top: 8px; color: #a0a4ba; font-size: 12px;">配信の演出上GMアリで作成していますが、そのうちもっと遊びやすいようにGMナシ版の作成も検討中なので許してちょんまげ</li>
             </ul>
             <p style="margin-top: 16px; color: #a0a4ba; font-size: 12px; text-align: center;">
-              バグ報告・修正要望などは作成者の<a href="#" id="bug-report-link" style="color: #8be6c3; text-decoration: underline;">DM</a>まで！
+              バグ報告・修正要望などは作成者の<a href="https://x.com/GiGaBa_7" id="bug-report-link" style="color: #8be6c3; text-decoration: underline;">DM</a>まで！
             </p>
             <button id="start-game" class="btn primary start-btn" style="display: none;">ゲーム開始</button>
           </section>
@@ -300,6 +300,9 @@
         <div class="modal-content">
           <h2 id="announcement-title">アナウンス</h2>
           <p id="announcement-subtitle" class="announcement-subtitle" style="display: none;"></p>
+          <div id="announcement-actions" class="modal-actions" style="display: none; justify-content: center; margin-top: 20px;">
+            <button id="announcement-ok" class="btn primary">OK</button>
+          </div>
         </div>
       </div>
 
