--- a/index.html
+++ b/index.html
@@ -255,6 +255,9 @@
               <button id="btn-doctor-skip" class="btn ghost wide" style="display: none;">
                 使用しない
               </button>
+              <button id="open-rulebook-from-participant" class="btn ghost wide" style="margin-top: 12px;">
+                ルールブック
+              </button>
             </div>
           </div>
         </div>
@@ -331,7 +334,7 @@
         <div class="modal-backdrop"></div>
         <div class="modal-content" style="max-width: 600px;">
           <h2 style="text-align: center; margin-bottom: 24px; color: #f5f5f7;">極秘命令</h2>
-          <div id="mission-brief-content" class="mission-brief-content" style="max-height: 400px; overflow-y: auto; padding: 20px; background: rgba(0, 0, 0, 0.3); border-radius: 8px; line-height: 1.8; color: #e0e0e0; font-size: 16px; white-space: pre-line;">
+          <div id="mission-brief-content" class="mission-brief-content" style="padding: 20px; background: rgba(0, 0, 0, 0.3); border-radius: 8px; line-height: 1.8; color: #e0e0e0; font-size: 16px; white-space: pre-line;">
           </div>
           <div class="modal-actions" style="justify-content: center; margin-top: 24px;">
             <button id="mission-brief-close" class="btn primary">了解</button>
