--- a/index.html
+++ b/index.html
@@ -353,35 +353,174 @@
           <div class="rulebook-pages" style="min-height: 500px; padding: 20px; background: rgba(0, 0, 0, 0.3); border-radius: 8px; overflow-y: auto;">
             <div id="rulebook-page-1" class="rulebook-page" style="display: none;">
               <h3>このゲームの目標と勝利条件</h3>
-              <p style="color: #a0a4ba; line-height: 1.8;">（内容は後日設定）</p>
+              <p style="color: #a0a4ba; line-height: 1.8;">
+                このゲームは、アークナイツのステージを攻略する協力型ゲームです。プレイヤーは役職に分かれ、協力してステージをクリアしていきます。
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>勝利条件：</strong><br />
+                ・市民陣営：全ターン終了時に成功（○）が過半数以上になること<br />
+                ・人狼陣営：全ターン終了時に失敗（×）が過半数以上になること、またはドクターが失敗し神拳も使用できなかった場合
+              </p>
             </div>
             <div id="rulebook-page-2" class="rulebook-page" style="display: none;">
               <h3>このゲームの流れ</h3>
-              <p style="color: #a0a4ba; line-height: 1.8;">（内容は後日設定）</p>
+              <p style="color: #a0a4ba; line-height: 1.8;">
+                <strong>1. ゲーム開始</strong><br />
+                役職がランダムに配布されます。各プレイヤーは自分の役職を確認します。
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>2. ターン進行</strong><br />
+                各ターンは以下の流れで進行します：<br />
+                ① ステージ選出（GMがルーレットで選出）<br />
+                ② 挑戦開始（「○○の挑戦です」）<br />
+                ③ 人狼妨害フェーズ（人狼が妨害を選択可能）<br />
+                ④ ステージ攻略（プレイヤーが実際にステージをプレイ）<br />
+                ⑤ 成功/失敗判定（GMが判定）<br />
+                ⑥ ドクター神拳フェーズ（失敗時のみ、ドクターが神拳を使用可能）<br />
+                ⑦ 次のプレイヤーへ（全員が挑戦するまで繰り返し）
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>3. ターン終了</strong><br />
+                全プレイヤーが挑戦を終えると、ターン結果が確定します。成功なら○、失敗なら×が記録されます。
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>4. 会議フェーズ</strong><br />
+                ターン終了後、5分間の会議フェーズが開始されます。この間にプレイヤーは自由に話し合いができます。
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>5. ゲーム終了</strong><br />
+                全ターン終了後、または勝利条件を満たした時点でゲームが終了し、勝敗が決定します。
+              </p>
             </div>
             <div id="rulebook-page-3" class="rulebook-page" style="display: none;">
               <h3>ステージ攻略と判定について</h3>
-              <p style="color: #a0a4ba; line-height: 1.8;">（内容は後日設定）</p>
+              <p style="color: #a0a4ba; line-height: 1.8;">
+                <strong>ステージ選出</strong><br />
+                GMが設定したステージ範囲から、ルーレットでランダムにステージが選出されます。
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>ステージ攻略</strong><br />
+                選出されたステージを、挑戦プレイヤーが実際にプレイします。人狼の妨害が適用されている場合は、その制約に従ってプレイする必要があります。
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>成功/失敗判定</strong><br />
+                ステージをクリアできた場合は成功（○）、クリアできなかった場合は失敗（×）となります。判定はGMが行います。
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>ドクター神拳</strong><br />
+                失敗した場合、ドクターが「ドクター神拳」を使用することで、失敗をなかったことにできます。ただし、ドクター神拳は1ゲーム中に5回までしか使用できません。
+              </p>
             </div>
             <div id="rulebook-page-4" class="rulebook-page" style="display: none;">
               <h3>役職について</h3>
-              <p style="color: #a0a4ba; line-height: 1.8;">（内容は後日設定）</p>
+              <p style="color: #a0a4ba; line-height: 1.8;">
+                このゲームには3つの役職があります：
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>市民</strong><br />
+                通常のプレイヤーです。ステージを攻略することを目標とします。特別な能力はありませんが、協力してステージをクリアしていきます。
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>ドクター</strong><br />
+                失敗したステージを「ドクター神拳」で打ち消すことができます。1ゲーム中に5回まで使用可能です。市民陣営の勝利を目指します。
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>レユニオン（人狼）</strong><br />
+                ステージ攻略を妨害する役職です。各挑戦の開始時に妨害を選択できます。妨害にはコストが設定されており、コストの合計が初期コスト（デフォルト100）を超えない範囲で使用できます。人狼陣営の勝利を目指します。
+              </p>
             </div>
             <div id="rulebook-page-5" class="rulebook-page" style="display: none;">
               <h3>役職ごとのルールと行動指針（市民）</h3>
-              <p style="color: #a0a4ba; line-height: 1.8;">（内容は後日設定）</p>
+              <p style="color: #a0a4ba; line-height: 1.8;">
+                <strong>市民の役割</strong><br />
+                市民は、ステージを攻略して成功（○）を増やすことが主な役割です。人狼の妨害に注意しながら、協力してステージをクリアしていきます。
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>行動指針</strong><br />
+                ・人狼の妨害内容を確認し、その制約に従ってステージをプレイする<br />
+                ・他のプレイヤーと協力し、情報を共有する<br />
+                ・会議フェーズでは、人狼の可能性を探るために議論に参加する<br />
+                ・ステージ攻略時は、妨害の制約を守りながら最善を尽くす
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>注意事項</strong><br />
+                ・人狼の妨害は必ず守る必要があります<br />
+                ・妨害の内容を無視したプレイは禁止です
+              </p>
             </div>
             <div id="rulebook-page-6" class="rulebook-page" style="display: none;">
               <h3>役職ごとのルールと行動指針（ドクター）</h3>
-              <p style="color: #a0a4ba; line-height: 1.8;">（内容は後日設定）</p>
+              <p style="color: #a0a4ba; line-height: 1.8;">
+                <strong>ドクターの役割</strong><br />
+                ドクターは、失敗したステージを「ドクター神拳」で打ち消すことができます。1ゲーム中に5回まで使用可能です。
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>ドクター神拳の使用</strong><br />
+                ・失敗したステージに対して、ドクターが「ドクター神拳」を使用できます<br />
+                ・使用すると、その失敗はなかったことになり、成功（○）として記録されます<br />
+                ・1ゲーム中に5回まで使用可能です<br />
+                ・「背水の陣」の妨害が適用されている場合は、そのターン中は使用できません
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>行動指針</strong><br />
+                ・重要なターンや、失敗が致命的になる場面で使用を検討する<br />
+                ・残り回数を考慮しながら、戦略的に使用する<br />
+                ・会議フェーズでは、神拳の使用状況を考慮した議論を行う
+              </p>
             </div>
             <div id="rulebook-page-7" class="rulebook-page" style="display: none;">
               <h3>役職ごとのルールと行動指針（レユニオン）</h3>
-              <p style="color: #a0a4ba; line-height: 1.8;">（内容は後日設定）</p>
+              <p style="color: #a0a4ba; line-height: 1.8;">
+                <strong>レユニオン（人狼）の役割</strong><br />
+                レユニオンは、ステージ攻略を妨害することで、失敗（×）を増やすことが主な役割です。各挑戦の開始時に妨害を選択できます。
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>妨害の選択</strong><br />
+                ・各挑戦の開始時に、妨害を選択するかどうかを決定します<br />
+                ・妨害を選択する場合は、コストを消費して妨害を発動します<br />
+                ・妨害にはコストが設定されており、コストの合計が初期コスト（デフォルト100）を超えない範囲で使用できます<br />
+                ・妨害を選択しないことも可能です
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>妨害の種類</strong><br />
+                ・強襲作戦（コスト20）：作戦に問題が生じたため、強襲作戦となります<br />
+                ・ジャミング（コスト15）：編成上限8名<br />
+                ・整備不良（コスト10）：ランダム職業使用禁止<br />
+                ・背水の陣（コスト30）：ドクター神拳使用不可<br />
+                ・補給遮断（コスト15）：再配置禁止<br />
+                ・工作（コスト10）：手動スキル使用禁止
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>行動指針</strong><br />
+                ・コストを考慮しながら、効果的な妨害を選択する<br />
+                ・重要なターンや、成功が致命的になる場面で妨害を使用する<br />
+                ・会議フェーズでは、人狼であることを隠しながら議論に参加する
+              </p>
             </div>
             <div id="rulebook-page-8" class="rulebook-page" style="display: none;">
               <h3>禁止行為</h3>
-              <p style="color: #a0a4ba; line-height: 1.8;">（内容は後日設定）</p>
+              <p style="color: #a0a4ba; line-height: 1.8;">
+                以下の行為は禁止されています：
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>ゲーム進行に関する禁止行為</strong><br />
+                ・人狼の妨害内容を無視したプレイ<br />
+                ・妨害の制約に違反したステージ攻略<br />
+                ・GMの判定に従わない行為<br />
+                ・ゲームの進行を故意に妨害する行為
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>コミュニケーションに関する禁止行為</strong><br />
+                ・役職を直接的に暴露する行為（ただし、推測や議論は可）<br />
+                ・ゲーム外の情報を使用する行為<br />
+                ・他のプレイヤーを脅迫・中傷する行為
+              </p>
+              <p style="color: #a0a4ba; line-height: 1.8; margin-top: 12px;">
+                <strong>その他の禁止行為</strong><br />
+                ・チート行為や不正な操作<br />
+                ・ゲームの公平性を損なう行為<br />
+                ・GMの指示に従わない行為
+              </p>
             </div>
           </div>
           <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 20px; padding-top: 20px; border-top: 1px solid rgba(255, 255, 255, 0.1);">
@@ -543,6 +682,22 @@
                     <option value="5">5章</option>
                   </select>
                 </div>
+              </label>
+            </div>
+
+            <div class="options-row">
+              <label>
+                人狼の初期コスト
+                <input
+                  type="number"
+                  id="rules-wolf-initial-cost"
+                  name="rules-wolf-initial-cost"
+                  min="1"
+                  max="200"
+                  value="100"
+                  style="width: 100%; padding: 8px; margin-top: 4px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.2); background: rgba(5,7,18,0.8); color: #f5f5f7; font-size: 14px;"
+                />
+                <p style="font-size: 11px; color: #a0a4ba; margin-top: 4px;">人狼が使用できる妨害の総コストです（デフォルト: 100）</p>
               </label>
             </div>
 
